# cairo-rs

./: Cargo.toml  README.md
cairo-sys/: Cargo.toml  README.md
cairo-sys/src/: build.rs  lib.rs
examples/: main.rs
src/: common.rs  format.rs  lib.rs  pattern.rs  result.rs  surface.rs  version.rs
src/pattern/: linear.rs  mod.rs  radial.rs  solid.rs  surface.rs
src/surface/: image.rs  mod.rs
