[package]

name = "cairo"
version = "0.0.1"
authors = ["cyderize <admin@cyderize.org>"]

description = "Cairo bindings for Rust."
repository = "https://github.com/cyderize/cairo-rs.git"

readme = "README.md"

keywords = ["cairo", "graphics"]

license = "MIT"

[dependencies.cairo-sys]
version = "~0.0.2"
path = "cairo-sys"