[package]
authors = ["cyderize <admin@cyderize.org>"]
build = "src/build.rs"
description = "Cairo bindings for Rust."
keywords = ["cairo", "graphics"]
license = "MIT"
links = "cairo"
name = "cairo-sys"
readme = "README.md"
repository = "https://github.com/cyderize/cairo-rs.git"
version = "0.0.2"

[dependencies]
libc = "0.2.15"
